@@ -8,14 +8,14 @@ import java.util.Map;
 import java.util.stream.Collectors;
 
 public class BinaryRecordIdValuesConverter implements BinarySerializer<BinaryRecordIdValues>, BinaryDeserializer<BinaryRecordIdValues> {
-  private LongValueConverter idIndexConverter;
-  private ByteArrayConverter idConverter;
-  private List<ByteArrayConverter> ancestorConverters;
+  private final LongValueConverter idIndexConverter;
+  private final ByteArrayConverter idConverter;
+  private final List<ByteArrayConverter> ancestorConverters;
 
   public BinaryRecordIdValuesConverter(Entity entity, Map<String, Integer> bytesReservedByEntityId) {
     this(
-        entity.getAncestorEntities().stream().map(e -> bytesReservedByEntityId.get(e.getId())).collect(Collectors.toList()),
-        bytesReservedByEntityId.get(entity.getId())
+      entity.getAncestorEntities().stream().map(e -> bytesReservedByEntityId.get(e.getId())).collect(Collectors.toList()),
+      bytesReservedByEntityId.get(entity.getId())
     );
   }
 
@@ -23,8 +23,8 @@ public class BinaryRecordIdValuesConverter implements BinarySerializer<BinaryRec
     this.idIndexConverter = new LongValueConverter();
     this.idConverter = new ByteArrayConverter(bytesReservedForId);
     this.ancestorConverters = bytesReservedPerAncestor.stream()
-        .map(ancestorNumBytes -> new ByteArrayConverter(ancestorNumBytes))
-        .collect(Collectors.toList());
+      .map(ByteArrayConverter::new)
+      .toList();
   }
 
   @Override
@@ -44,7 +44,7 @@ public class BinaryRecordIdValuesConverter implements BinarySerializer<BinaryRec
 
   @Override
   public int numBytes() {
-    int numAncestorBytes = ancestorConverters.stream().collect(Collectors.summingInt(ByteArrayConverter::numBytes));
+    int numAncestorBytes = ancestorConverters.stream().mapToInt(ByteArrayConverter::numBytes).sum();
     int numEntityIdBytes = idConverter.numBytes();
     // idIndex + id_string + ancestor_id_strings
     return Long.BYTES + numAncestorBytes + numEntityIdBytes;
@@ -73,7 +73,7 @@ public class BinaryRecordIdValuesConverter implements BinarySerializer<BinaryRec
 
   @Override
   public BinaryRecordIdValues fromBytes(ByteBuffer bytes) {
-    Long idIndex = bytes.getLong();
+    long idIndex = bytes.getLong();
     byte[] entityId = idConverter.fromBytes(bytes);
     byte[][] ancestors = new byte[ancestorConverters.size()][];
     for (int i = 0; i < ancestorConverters.size(); i++) {
